# ensample

./: .coverage  AGENTS.md  Dockerfile  README.md  STATUS.md  codeflow-mcp-example.py  codewrite-mcp.code.mdx  pyproject.toml
docs/: MILLION_STEPS.md  PLAN.md  SPEC.md  index.html
src/ensample/: __init__.py  ensemble_manager.py  fast_path_controller.py  llm_provider.py  mdap_engine.py  models.py  observability.py  pricing_service.py  server.py
src/ensample/tools/: maintenance_tools.py  mdap_tools.py
src/mdapflow_mcp/: config.py  ensemble_manager.py  exceptions.py  llm_provider.py  mdap_engine.py  metrics.py  models.py  observability.py  output_parser.py  pricing_service.py  red_flagging_engine.py  server.py  voting_mechanism.py
src/mdapflow_mcp/tools/: __init__.py  maintenance_tools.py  mdap_tools.py
tests/: __init__.py  test_ensemble_manager.py  test_fast_path_controller.py  test_llm_provider.py  test_mdap_engine.py  test_metrics.py  test_models.py  test_output_parser.py  test_pricing_service.py  test_red_flagging_engine.py  test_voting_mechanism.py
